--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Robocop action
-        uses: bhirsz/actions-robocop@master
+        uses: bhirsz/actions-robocop@main
