--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Robocop action
-        uses: bhirsz/actions-robocop@main
+        uses: wbmatthew/actions-robocop@main
 
